--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "normalizr",
+  "name": "@process-street/normalizr",
   "version": "3.3.0",
   "description": "Normalizes and denormalizes JSON according to schema for Redux and Flux applications",
   "bugs": {
@@ -58,8 +58,8 @@
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-filesize": "^1.5.0",
     "rollup-plugin-uglify": "^3.0.0",
-    "typescript": "^2.1.4",
-    "typescript-definition-tester": "0.0.5",
+    "typescript": "^3.3.3333",
+    "typescript-definition-tester": "0.0.6",
     "uglify-es": "^3.3.8"
   },
   "dependencies": {},
