--- a/.babelrc
+++ b/.babelrc
@@ -1,1 +1,7 @@
-{ "presets": ["./.babelrc.js"] }
+{
+  "presets": [ "@babel/preset-env" ],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-object-rest-spread"
+  ]
+}
