--- a/package.json
+++ b/package.json
@@ -50,35 +50,40 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^7.1.1",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
+    "babel-eslint": "^10.0.1",
+    "@babel/plugin-external-helpers": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.3.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
     "babel-preset-env": "^1.6.1",
-    "coveralls": "^2.11.15",
-    "eslint": "^4.19.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-jest": "^21.15.0",
-    "eslint-plugin-prettier": "^2.6.0",
+    "coveralls": "^3.0.3",
+    "eslint": "^5.14.1",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-jest": "^22.3.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "flow-bin": "^0.65.0",
     "husky": "^0.14.3",
     "immutable": "^3.8.1",
-    "jest": "^22.4.3",
+    "jest": "^24.1.0",
     "lint-staged": "^6.1.0",
     "npm-run-all": "^3.1.2",
     "prettier": "^1.12.1",
-    "rimraf": "^2.5.4",
-    "rollup": "^0.54.1",
-    "rollup-plugin-babel": "^3.0.3",
-    "rollup-plugin-filesize": "^1.5.0",
-    "rollup-plugin-uglify": "^3.0.0",
+    "rimraf": "^2.6.3",
+    "rollup": "^1.2.3",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-filesize": "^6.0.1",
+    "rollup-plugin-uglify": "^6.0.2",
     "semantic-release": "^15.13.3",
     "typescript": "^3.3.3333",
     "typescript-definition-tester": "0.0.6",
     "uglify-es": "^3.3.8"
   },
-  "dependencies": {},
+  "jest": {
+    "verbose": true,
+    "moduleFileExtensions": ["js"],
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$"
+  },
   "lint-staged": {
     "src/**/*.js": [
       "test",
