--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@process-street/normalizr",
-  "version": "3.3.0",
+  "version": "0.0.1",
   "description": "Normalizes and denormalizes JSON according to schema for Redux and Flux applications",
   "bugs": {
-    "url": "https://github.com/paularmstrong/normalizr/issues"
+    "url": "https://github.com/mavarazy/normalizr/issues"
   },
-  "homepage": "https://github.com/paularmstrong/normalizr",
+  "homepage": "https://github.com/mavarazy/normalizr",
   "repository": {
-    "url": "https://github.com/paularmstrong/normalizr.git",
+    "url": "https://github.com/mavarazy/normalizr.git",
     "type": "git"
   },
   "keywords": [
