--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.3.3",
-    "@babel/preset-env": "^7.3.1",
-    "babel-eslint": "^10.0.1",
     "@babel/plugin-external-helpers": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
+    "@process-street/subgrade": "^1.3.7",
+    "babel-eslint": "^10.0.1",
     "babel-preset-env": "^1.6.1",
     "coveralls": "^3.0.3",
     "eslint": "^5.14.1",
@@ -81,7 +83,8 @@
   },
   "jest": {
     "verbose": true,
-    "moduleFileExtensions": ["js"],
+    "moduleFileExtensions": [ "js" ],
+    "testEnvironment": "node",
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "coverageThreshold": {
       "global": {
