--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
   },
   "author": "Paul Armstrong",
   "contributors": [
-    "Dan Abramov"
+    "Dan Abramov",
+    "Anton Oparin"
   ],
   "license": "MIT",
   "devDependencies": {
@@ -65,11 +66,11 @@
     "eslint-plugin-jest": "^22.3.0",
     "eslint-plugin-prettier": "^3.0.1",
     "flow-bin": "^0.65.0",
-    "husky": "^0.14.3",
+    "husky": "^1.3.1",
     "immutable": "^3.8.1",
     "jest": "^24.1.0",
     "lint-staged": "^6.1.0",
-    "npm-run-all": "^3.1.2",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.12.1",
     "rimraf": "^2.6.3",
     "rollup": "^1.2.3",
@@ -83,7 +84,9 @@
   },
   "jest": {
     "verbose": true,
-    "moduleFileExtensions": [ "js" ],
+    "moduleFileExtensions": [
+      "js"
+    ],
     "testEnvironment": "node",
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "coverageThreshold": {
@@ -104,5 +107,8 @@
       "prettier --write",
       "git add"
     ]
+  },
+  "dependencies": {
+    "@process-street/normalizr": "^3.3.1"
   }
 }
